--- a/src/app/layout/search-bar/search-bar.component.html
+++ b/src/app/layout/search-bar/search-bar.component.html
@@ -3,7 +3,7 @@
     <input id="search-input" class="search-input" placeholder="Tìm kiếm..." type="text"
     [style.color]="textColor" (input)="changeColor()"/>
   </form>
-  <app-find-button></app-find-button>
+  <ng-content></ng-content>
 </div>
 
 
