feat: replace find button with create button in exam creation and teacher home components

--- a/src/app/pages/home/teacher-home/teacher-home.component.html
+++ b/src/app/pages/home/teacher-home/teacher-home.component.html
@@ -1,6 +1,6 @@
 <app-header-student></app-header-student>
 <app-search-bar>
-  <app-find-button></app-find-button>
+  <app-create-button></app-create-button>
 </app-search-bar>
 <div class="exam-table">
   <table>
