--- a/src/app/pages/teacher/exam-create-type/exam-create-type.component.scss
+++ b/src/app/pages/teacher/exam-create-type/exam-create-type.component.scss
@@ -2,7 +2,6 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 .header {
-    position: fixed;
     top: 0;
     z-index: 99;
     display: flex;
@@ -36,3 +35,60 @@
       }
     }
   }
+.exam-create-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 40px;
+  background-color: #f0f5f3;
+  height: calc(100vh - 80px);
+
+  .option-card {
+    background: white;
+    border-radius: 8px;
+    padding: 100px 60px 60px 60px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 30%;
+    transition: transform 0.3s ease;
+
+    &:hover {
+      transform: translateY(-5px);
+    }
+
+    .option-icon {
+      width: 120px;
+      height: 120px;
+      margin-bottom: 10px;
+    }
+
+    h3 {
+      font-size: 1.8rem;
+      font-weight: bold;
+      margin: 10px 0;
+    }
+
+    p {
+      font-size: 1.6rem;
+      color: #666;
+      margin-bottom: 15px;
+    }
+
+    .primary-btn {
+      background-color: #04AA6D;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      height: 50px;
+      width: 100%;
+
+      &:hover {
+        background-color: #0A944F;
+      }
+    }
+  }
+}
