--- a/src/app/pages/teacher/exam-create-with-file/exam-create-with-file.component.scss
+++ b/src/app/pages/teacher/exam-create-with-file/exam-create-with-file.component.scss
@@ -126,24 +126,30 @@
 // =====================
 .score-summary {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   background-color: #00834e;
-  padding: 15px;
   color: white;
-  gap: 20px;
-
-  .score-item {
+  padding: 15px 20px 15px 20px;
+  .score-item-wrappper{
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: space-between;
 
-    input {
-      width: 60px;
-      text-align: center;
-      font-size: 16px;
-      padding: 5px;
-      border: none;
-      border-radius: 5px;
+    .score-item {
+      display: flex;
+      margin-left: 10px;
+      gap: 5px;
+      justify-content: space-between;
+      align-items: center;
+
+      input {
+        width: 60px;
+        text-align: center;
+        font-size: 1.6rem;
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+      }
     }
   }
 
