feat: add exam created detail component and enhance exam creation workflow

--- a/src/app/pages/home/teacher-home/teacher-home.component.html
+++ b/src/app/pages/home/teacher-home/teacher-home.component.html
@@ -1,4 +1,4 @@
-<app-header-student></app-header-student>
+<app-header></app-header>
 <app-search-bar>
   <app-create-button></app-create-button>
 </app-search-bar>
