--- a/src/app/pages/teacher/exam-create-with-file/exam-create-with-file.component.scss
+++ b/src/app/pages/teacher/exam-create-with-file/exam-create-with-file.component.scss
@@ -72,30 +72,41 @@
 }
 
 .left-container {
-  width: 50%;
-  background: #f2f2f2;
-
-  .discard-button {
-    padding: 10px;
-
-    button {
-      background: #e74c3c;
-      color: white;
-      padding: 10px 15px;
+  width: 60%;
+  background: #ffffff;
+  height: 60vh;
+  .upload-file-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    .upload-button {
+      font-size: 1.6rem;
+      width: 100%;
+      height: 40px;
+      background: #04aa6d;
+      color: #ffffff;
       border: none;
       cursor: pointer;
-      border-radius: 5px;
-      transition: 0.3s;
-
+      font-weight: bold;
+      transition: background 0.3s ease-in-out;
       &:hover {
-        background: #c0392b;
+        background: #02774b;
       }
     }
+  }
+  .word-preview-container {
+    width: 100%;
+    height: calc(100vh - 120px);
+  }
+  .pdf-preview-container iframe {
+    width: 100%;
+    height: calc(100vh - 120px);
+    border: 1px solid #ccc;
   }
 }
 
 .right-container {
-  width: 50%;
+  width: 40%;
 }
 
 // =====================
@@ -103,15 +114,14 @@
 // =====================
 .tab-header {
   display: flex;
-
+  justify-content: center;
   .tab-button {
     flex: 1;
-    padding: 10px;
+    height: 40px;
     border: none;
     background: #ededed;
     cursor: pointer;
     font-size: 16px;
-    border-bottom: 3px solid transparent;
     transition: 0.3s;
 
     &.active {
