--- a/src/app/pages/home/teacher-home/teacher-home.component.html
+++ b/src/app/pages/home/teacher-home/teacher-home.component.html
@@ -2,26 +2,24 @@
 <app-search-bar>
   <app-create-button></app-create-button>
 </app-search-bar>
-<div class="exam-table">
-  <table>
-    <thead>
-    <tr>
-      <th>Tên kỳ thi đã tạo</th>
-      <th>Ngày tạo</th>
-      <th>Trạng thái</th>
-      <th>Số lượng đề</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let exam of exams" (click)="navigateToExamDetail(exam)">
-      <td>
-        <p class="exam-name">{{ exam.name }}</p>
-        <p class="class-code">Mã lớp: {{ exam.examCode }}</p>
-      </td>
-      <td>{{ exam.day }}</td>
-      <td>{{ exam.status }}</td>
-      <td>{{ exam.tests}}</td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+<div class="table-container">
+    <table>
+      <tbody>
+      <tr>
+        <th>Tên kỳ thi đã tạo</th>
+        <th>Ngày tạo</th>
+        <th>Trạng thái</th>
+        <th>Số lượng đề</th>
+      </tr>
+      <tr *ngFor="let exam of exams" (click)="navigateToExamDetail(exam)">
+        <td>
+          <p class="exam-name">{{exam.type}} - {{ exam.name }}</p>
+          <p class="class-code">Mã lớp: {{ exam.examCode }}</p>
+        </td>
+        <td>{{ exam.day }}</td>
+        <td>{{ exam.status }}</td>
+        <td>{{ exam.tests}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
