--- a/src/app/pages/student/exam-detail/exam-detail.component.html
+++ b/src/app/pages/student/exam-detail/exam-detail.component.html
@@ -5,7 +5,7 @@
     <table>
       <thead>
       <tr>
-        <th>{{examName}} / {{examCode}}</th>
+        <th>{{examType}} - {{examName}} / {{examCode}}</th>
         <th>Thời gian</th>
         <th>Ngày bắt đầu</th>
         <th>Trạng thái</th>
