--- a/src/app/pages/teacher/exam-create-with-file/exam-create-with-file.component.html
+++ b/src/app/pages/teacher/exam-create-with-file/exam-create-with-file.component.html
@@ -125,6 +125,25 @@
           </div>
 
           <div class="input-wrapper">
+            <label for="ma-de-thi">Mã đề thi</label>
+            <input type="text" id="ma-de-thi" formControlName="maDeThi">
+            <div *ngIf="examForm.get('maDeThi')?.invalid && examForm.get('maDeThi')?.touched" class="error">
+              Mã kỳ thi phải có ít nhất 5 ký tự.
+            </div>
+          </div>
+
+          <div>
+            <label for="thoiGianLamBai">Thời gian làm bài:</label>
+            <select id="thoiGianLamBai" formControlName="thoiGianLamBai">
+              <option value="15">15 phút</option>
+              <option value="30">30 phút</option>
+              <option value="60">60 phút</option>
+              <option value="90">90 phút</option>
+              <option value="120">120 phút</option>
+            </select>
+          </div>
+
+          <div class="input-wrapper">
             <label for="ma-ky-thi">Mã kỳ thi</label>
             <input type="text" id="ma-ky-thi" formControlName="maKyThi">
             <div *ngIf="examForm.get('maKyThi')?.invalid && examForm.get('maKyThi')?.touched" class="error">
