feat: enhance edit exam paper functionality with file upload and dynamic routing

--- a/src/app/pages/teacher/exam-created-detail/exam-created-detail.component.html
+++ b/src/app/pages/teacher/exam-created-detail/exam-created-detail.component.html
@@ -35,7 +35,7 @@
         <td>{{ paper.dateCreated }}</td>
         <td>{{ paper.status }}</td>
         <td>
-<!--          <button class="edit-button" (click)="editExamPaper()">Sửa</button>-->
+          <button class="edit-button" (click)="editExamPaper(paper)">Sửa</button>
           <button class="delete-button" (click)="deleteExamPaper()">Xóa</button>
         </td>
       </tr>
