feat: implement new exam paper creation component with file upload and dynamic tab navigation

--- a/src/app/pages/teacher/exam-created-detail/exam-created-detail.component.scss
+++ b/src/app/pages/teacher/exam-created-detail/exam-created-detail.component.scss
@@ -64,7 +64,7 @@
     }
 
     th, td {
-      width: 50px; /* Assuming 5 columns for equal width */
+      width: 20%; /* Assuming 5 columns for equal width */
       padding: 10px 10px 10px 35px;
       text-align: left;
       border: none; /* Remove borders */
