--- a/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
+++ b/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
@@ -1,11 +1,14 @@
 <header class="header">
-    <div class="wraper-header">
-      <div class="logo">Online Exam Portal</div>
-      <nav class="breadcrumb">
-        <span>►</span>
-        <span>Tạo kì thi</span>
-      </nav>
-    </div>
+  <div class="wraper-logo">
+    <div class="logo">Online Exam Portal</div>
+    <nav class="breadcrumb">
+      <span>►</span>
+      <span>Tạo kì thi</span>
+    </nav>
+  </div>
+  <div class="return-button">
+    <button (click)="goBack()">quay lại</button>
+  </div>
 </header>
 <div class="exam-create-container">
   <div class="option-card">
