--- a/src/app/pages/teacher/exam-created-detail/exam-created-detail.component.scss
+++ b/src/app/pages/teacher/exam-created-detail/exam-created-detail.component.scss
@@ -14,12 +14,37 @@
 
   .exam-info {
     display: flex;
+    align-items: center;
     gap: 50px;
   }
 
   .exam-info div {
+    display: flex;
+    align-items: center;
+    gap: 5px;
     font-size: 1.6rem;
     font-weight: bold;
+
+    .examPassword-info{
+      width: 142px;
+      display: flex;
+      align-items: center;
+    }
+
+      .eye-icon {
+        cursor: pointer;
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        margin-bottom: 5px;
+      }
+
+
+
+    .eye-icon svg {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   .actions{
