--- a/src/app/pages/teacher/exam/with-file/exam-created-with-file-detail/exam-created-with-file-detail.component.html
+++ b/src/app/pages/teacher/exam/with-file/exam-created-with-file-detail/exam-created-with-file-detail.component.html
@@ -4,6 +4,7 @@
     <div class="exam-info">
       <div class="exam-name">{{examType}} - {{ examName }}</div>
       <div class="examCode">Mã kỳ thi: {{ examCode }}</div>
+      <div class="source">Dạng đề thi: file có sẵn</div>
       <div class="examPassword">
         <div class="examPassword-info">
           Mật khẩu:
