--- a/src/app/pages/teacher/exam/with-file/exam-created-with-file-detail/exam-created-with-file-detail.component.scss
+++ b/src/app/pages/teacher/exam/with-file/exam-created-with-file-detail/exam-created-with-file-detail.component.scss
@@ -117,7 +117,7 @@
     }
   }
   .exam-results-table {
-    max-height: 350px;
+    max-height: calc(100vh - 251px);
     overflow-y: auto;
 
     table {
