feat: remove exam status from edit exam paper form and update related components

--- a/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.html
+++ b/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.html
@@ -11,6 +11,14 @@
   </div>
 </header>
 
+<!-- Darkened background when loading -->
+<div *ngIf="loading" class="modal-overlay"></div>
+
+<!-- Loading indicator -->
+<div *ngIf="loading" class="loading-indicator">
+  Uploading...
+</div>
+
 <div class="container">
   <!-- Left content -->
   <div class="left-container">
