--- a/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.scss
+++ b/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.scss
@@ -63,6 +63,26 @@
   }
 }
 
+.loading-indicator {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.5rem;
+  color: #000000;
+  z-index: 1001; // Ensure it is above the overlay
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); // Dark background with 50% opacity
+  z-index: 1000; // Ensure it is below the loading indicator
+}
+
 // =====================
 // LAYOUT CONTAINER
 // =====================
