--- a/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.html
+++ b/src/app/pages/teacher/exam/with-file/exam-create-with-file/exam-create-with-file.component.html
@@ -11,13 +11,8 @@
   </div>
 </header>
 
-<!-- Darkened background when loading -->
-<div *ngIf="loading" class="modal-overlay"></div>
+<app-loading *ngIf="loading" text="🌟Creating exam..."></app-loading>
 
-<!-- Loading indicator -->
-<div *ngIf="loading" class="loading-indicator">
-  Uploading...
-</div>
 
 <div class="container">
   <!-- Left content -->
